--- a/portfolio.html
+++ b/portfolio.html
@@ -5,9 +5,13 @@
     <title>Portfolio</title> 
     </head>
     <body>
+        <!-- Headings -->
         <h1>Welcome to my web page!</h1>
         <h2><strong> My name is Annabel.</strong></h2>
         <img src="images/image1.jpg" alt="A photo of myself">
         <h2><em>About Me</em></h2>
+        <p>
+            
+        </p>
     </body>
 </html>
