--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
         <!-- Headings -->
         <h1>Welcome to my web page!</h1>
         <h2><strong> My name is Annabel.</strong></h2>
-        <img src="images/image1.jpg" alt="A photo of myself">
+        <img src="images/image1.jpg" alt="A photo of myself. The author">
         <h2><em>About Me</em></h2>
         <p>
             
