add all changes to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <!-- Headings -->
         <h1>Welcome to my web page!</h1>
         <h2><strong> My name is Annabel.</strong></h2>
+        <img src="images/image1.jpg" alt="A photo myself.The Author">
         <h2><em>About Me</em></h2>
         <p>
             
