add link to my-first-website to index.html.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <img src="images/image2.jpg" alt="A photo myself.The Author">
         <h2><em>About Me</em></h2>
         <p>
-            
+            Some of the projects that i have been able to work on are:
+        <ul>
+            <li><a href="https://annabelmate.github.io/my-first-website/.</a></li>
+        </ul>
         </p>
     </body>
 </html>
