add link of my first webpage to p

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>
             Some of the projects that i have been able to work on are:
         <ul>
-            <li><a href="https://annabelmate.github.io/my-first-website/.</a></li>
+            <li>Here is a link to my <a href="https://annabelmate.github.io/my-first-website/.">first web page</a>.</li>
         </ul>
         </p>
     </body>
