add link to my news article to p

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             Some of the projects that i have been able to work on are:
         <ul>
             <li>My <a href="https://annabelmate.github.io/my-first-website/.">first web page</a>.</li>
+            <li>My <a href="https://annabelmate.github.io/News/.">News Article</a>.</li>
         </ul>
         </p>
     </body>
