add full stop to about me.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>Welcome to my web page!</h1>
         <h2><strong> My name is Annabel.</strong></h2>
         <img src="images/image2.jpg" alt="A photo myself.The Author">
-        <h2><em>About Me</em></h2>
+        <h2><em>About Me.</em></h2>
         <p>
             Some of the projects that i have been able to work on are:
         <ul>
