--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <!-- Headings -->
         <h1>Welcome to my web page!</h1>
-        <h2><strong> My name is Annabel.</strong></h2>
+        <h2><strong> My name is <em>Annabel.</em></strong></h2>
         <img src="images/image2.jpg" alt="A photo myself.The Author">
         <h2><em>About Me.</em></h2>
         <p>
