add ol, li to another p.

--- a/index.html
+++ b/index.html
@@ -17,5 +17,10 @@
             <li>My <a href="https://annabelmate.github.io/News/.">News Article</a>.</li>
         </ul>
         </p>
+        <p>
+        <ol>
+            <li>Education.</li>
+        </ol>
+        </p>
     </body>
 </html>
