add strong and em to education.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </p>
         <p>
         <ol>
-            <li>Education.</li>
+            <li><strong><em>Education.</em></strong></li>
         </ol>
         </p>
     </body>
