--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@
         <p>
         <ol>
             <li><strong><em>Education.</em></strong></li>
+            I attended primary school at Light Academy before transferring to Laiser Hill Academy where i completed my KCPE scoring 379 marks.
+            I then proceeded to Laiser Hill Secondary School where i completed my secondary education scoring a C- in my KCSE examinations.
+            I then joined Moringa School where i sought to learn coding and software development.
+            <li><strong><em>Software development.</em></strong></li>
+            I am currently studying software development at Moringa School and at the end of it i aspire to be a fully equipped Software Developer.
+            The reasons why i decided to take a course on programming are:
         </ol>
+        <ul>
+            <li>I wanted to test myself on my ability to be able to come up with problems and solve them and i believe software programming gives a person that opportunity because you get to think out of the norm.</li>
+            <li>Technology is also advancing and it changes every now and then and programming gives a person the opportunity to keep up with those changes.</li>
+            <li>I desired to challenge myself to learn something that was said to be 'difficult'.</li>
+            <li>My desire to acquire and learn a new skill caused me to choose to learn programming.</li>
+        </ul>
         </p>
     </body>
 </html>
