add changes on styles.css to index.html.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <body>
         <!-- Headings -->
         <h1>Welcome to my web page!</h1>
-        <h2><strong> My name is <em>Annabel.</em></strong></h2>
+        <h2>My name is <em>Annabel.</em></h2>
         <img src="images/image2.jpg" alt="A photo myself.The Author">
         <h2><em>About Me.</em></h2>
+        <!-- Paragraphs -->
         <p>
             Some of the projects that i have been able to work on are:
         <ul>
@@ -26,18 +27,24 @@
         </ul>
         <ul>
             <li><strong><em>Software development.</em></strong></li>
-        </ul>
             I am currently studying software development at Moringa School and at the end of it i aspire to be a fully equipped Software Developer.
-            The reasons why i decided to take a course on programming are:
-        <ol>
-            <li>I wanted to test myself on my ability to be able to come up with problems and solve them and i believe software programming gives a person that opportunity because you get to think out of the norm.</li>
-            <li>Technology is also advancing and it changes every now and then and programming gives a person the opportunity to keep up with those changes.</li>
-            <li>I desired to challenge myself to learn something that was said to be 'difficult'.</li>
-            <li>My desire to acquire and learn a new skill caused me to choose to learn programming.</li>
-        </ol>
+            The reasons why i decided to take a course on programming are;
+            I wanted to test myself on my ability to be able to come up with problems and solve them and i believe software programming gives a person that opportunity because you get to think out of the norm.
+            Technology is also advancing and it changes every now and then and programming gives a person the opportunity to keep up with those changes.
+            I desired to challenge myself to learn something that was said to be 'difficult'.
+            My desire to acquire and learn a new skill caused me to choose to learn programming.
         </p>
+        <h2>Hobbies, Skills and Interests.</h2>
         <p>
-
+        My <em>Hobbies,Skills and Interests</em> include;
+        <ol>
+            <li>Swimming.</li>
+            <li>Going on long walks.</li>
+            <li>Traveling.</li>
+            <li>Reading Novels.</li>
+            <li>Listening to podcasts.</li>
+            <li>Programming.</li>
+        </ol>
         </p>
     </body>
 </html>
