add all changes from styles.css to index.html.

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
         <h2><em>About Me.</em></h2>
         <!-- Paragraphs -->
         <p>
-            Some of the projects that i have been able to work on are:
+            Some of the <strong><span style="color: aqua;">projects</span></strong> that i have been able to work on are:
         <ul>
             <li>My <a href="https://annabelmate.github.io/my-first-website/.">first web page</a>.</li>
             <li>My <a href="https://annabelmate.github.io/News/.">News Article</a>.</li>
         </ul>
         </p>
+        <div class="main">
         <p>
         <ul>
             <li><strong><em>Education.</em></strong></li>
@@ -27,13 +28,15 @@
         </ul>
         <ul>
             <li><strong><em>Software development.</em></strong></li>
-            I am currently studying software development at Moringa School and at the end of it i aspire to be a fully equipped Software Developer.
+        <div class="box">I am currently studying software development at Moringa School and at the end of it i aspire to be a fully equipped Software Developer.
             The reasons why i decided to take a course on programming are;
             I wanted to test myself on my ability to be able to come up with problems and solve them and i believe software programming gives a person that opportunity because you get to think out of the norm.
             Technology is also advancing and it changes every now and then and programming gives a person the opportunity to keep up with those changes.
             I desired to challenge myself to learn something that was said to be 'difficult'.
-            My desire to acquire and learn a new skill caused me to choose to learn programming.
+            My desire to acquire and learn a new skill caused me to choose to learn programming.</div>
         </p>
+        </div>
+        <div class="column">
         <h2>Hobbies, Skills and Interests.</h2>
         <p>
         My <em>Hobbies,Skills and Interests</em> include;
@@ -46,5 +49,6 @@
             <li>Programming.</li>
         </ol>
         </p>
+        </div>
     </body>
 </html>
